<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/begin_tour_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:height="200dp"
        android:background="@drawable/welcome_btn_bg"
        android:onClick="beginTourOnClick"
        android:text="@string/begin_tour_button_text"
        android:textColor="#ffffff"
        android:textSize="20dp" />


</RelativeLayout>