<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/welcome_language">


        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="FRANÇAIS"
            android:id="@+id/button"
            android:layout_marginTop="66dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#FFE33C3C"
            android:onClick="changeLanguageOnClickFr"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="ENGLISH"
            android:id="@+id/button2"
            android:layout_marginTop="20dp"
            android:background="#FFE33C3C"
            android:onClick="changeLanguageOnClickEn"
            android:layout_below="@+id/button"
            android:layout_alignStart="@+id/button" />
</RelativeLayout>