<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoryLineActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/story_text_box"
        android:gravity="end"
        android:background="@color/rca_primary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/storyline_activity"
            android:layout_marginRight="10dp"
            android:textSize = "32sp"
            android:textColor = "#FFFFFF"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        tools:context=".StoryLineActivity"
        android:background="#FFE33C3C"
        android:layout_below="@+id/story_text_box" >

        <com.dexafree.materialList.view.MaterialListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/material_listview"/>

    </RelativeLayout>

</RelativeLayout>
